PA1A/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | COMPLEX
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | PrintCompStmt ';'
  37       | StmtBlock
  38       | DoStmt ';'

  39  DoStmt : DO DoBranchList DoSubStmt OD

  40  DoBranchList : DoBranchList DoBranch
  41               |

  42  DoBranch : DoSubStmt NEXT

  43  DoSubStmt : Expr ':' Stmt

  44  SimpleStmt : LValue '=' Expr
  45             | Call
  46             |

  47  Receiver : Expr '.'
  48           |

  49  LValue : Receiver IDENTIFIER
  50         | Expr '[' Expr ']'

  51  Call : Receiver IDENTIFIER '(' Actuals ')'

  52  Expr : LValue
  53       | Call
  54       | Constant
  55       | Expr '+' Expr
  56       | Expr '-' Expr
  57       | Expr '*' Expr
  58       | Expr '/' Expr
  59       | Expr '%' Expr
  60       | Expr EQUAL Expr
  61       | Expr NOT_EQUAL Expr
  62       | Expr '<' Expr
  63       | Expr '>' Expr
  64       | Expr LESS_EQUAL Expr
  65       | Expr GREATER_EQUAL Expr
  66       | Expr AND Expr
  67       | Expr OR Expr
  68       | '(' Expr ')'
  69       | '-' Expr
  70       | '!' Expr
  71       | '@' Expr
  72       | '$' Expr
  73       | '#' Expr
  74       | READ_INTEGER '(' ')'
  75       | READ_LINE '(' ')'
  76       | THIS
  77       | SUPER
  78       | NEW IDENTIFIER '(' ')'
  79       | NEW Type '[' Expr ']'
  80       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  81       | '(' CLASS IDENTIFIER ')' Expr
  82       | DCOPY '(' Expr ')'
  83       | SCOPY '(' Expr ')'
  84       | CASE '(' Expr ')' '{' ACaseExprList DefaultExpr '}'

  85  ACaseExprList : ACaseExprList ACaseExpr
  86                |

  87  ACaseExpr : Constant ':' Expr ';'

  88  DefaultExpr : DEFAULT ':' Expr ';'

  89  Constant : LITERAL
  90           | NULL

  91  Actuals : ExprList
  92          |

  93  ExprList : ExprList ',' Expr
  94           | Expr

  95  WhileStmt : WHILE '(' Expr ')' Stmt

  96  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  97  BreakStmt : BREAK

  98  IfStmt : IF '(' Expr ')' Stmt ElseClause

  99  ElseClause : ELSE Stmt
 100             |

 101  ReturnStmt : RETURN Expr
 102             | RETURN

 103  PrintStmt : PRINT '(' ExprList ')'

 104  PrintCompStmt : PRINTCOMP '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	COMPLEX  shift 18
	'}'  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 18
	.  error

	Type  goto 25


state 18
	Type : COMPLEX .  (10)

	.  reduce 10


state 19
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 18
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 18
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 18
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (46)
	Receiver : .  (48)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 47
	THIS  shift 48
	WHILE  shift 49
	FOR  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	COMPLEX  shift 18
	PRINTCOMP  shift 63
	CASE  shift 64
	DO  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'{'  shift 42
	'}'  shift 69
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48
	';'  reduce 46

	VariableDef  goto 73
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	IfStmt  goto 77
	WhileStmt  goto 78
	ForStmt  goto 79
	ReturnStmt  goto 80
	PrintStmt  goto 81
	BreakStmt  goto 82
	PrintCompStmt  goto 83
	DoStmt  goto 84
	Expr  goto 85
	LValue  goto 86
	Call  goto 87
	Receiver  goto 88
	Constant  goto 89


state 47
	Constant : NULL .  (90)

	.  reduce 90


state 48
	Expr : THIS .  (76)

	.  reduce 76


state 49
	WhileStmt : WHILE . '(' Expr ')' Stmt  (95)

	'('  shift 90
	.  error


state 50
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (96)

	'('  shift 91
	.  error


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (98)

	'('  shift 92
	.  error


state 52
	ReturnStmt : RETURN . Expr  (101)
	ReturnStmt : RETURN .  (102)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48
	';'  reduce 102

	Expr  goto 93
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 53
	BreakStmt : BREAK .  (97)

	.  reduce 97


state 54
	Expr : NEW . IDENTIFIER '(' ')'  (78)
	Expr : NEW . Type '[' Expr ']'  (79)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 96
	COMPLEX  shift 18
	.  error

	Type  goto 97


state 55
	PrintStmt : PRINT . '(' ExprList ')'  (103)

	'('  shift 98
	.  error


state 56
	Expr : READ_INTEGER . '(' ')'  (74)

	'('  shift 99
	.  error


state 57
	Expr : READ_LINE . '(' ')'  (75)

	'('  shift 100
	.  error


state 58
	Constant : LITERAL .  (89)

	.  reduce 89


state 59
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (80)

	'('  shift 101
	.  error


state 60
	Expr : SUPER .  (77)

	.  reduce 77


state 61
	Expr : DCOPY . '(' Expr ')'  (82)

	'('  shift 102
	.  error


state 62
	Expr : SCOPY . '(' Expr ')'  (83)

	'('  shift 103
	.  error


state 63
	PrintCompStmt : PRINTCOMP . '(' ExprList ')'  (104)

	'('  shift 104
	.  error


state 64
	Expr : CASE . '(' Expr ')' '{' ACaseExprList DefaultExpr '}'  (84)

	'('  shift 105
	.  error


state 65
	DoStmt : DO . DoBranchList DoSubStmt OD  (39)
	DoBranchList : .  (41)

	.  reduce 41

	DoBranchList  goto 106


state 66
	Expr : '-' . Expr  (69)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 107
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 67
	Expr : '!' . Expr  (70)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 108
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 68
	Expr : '(' . Expr ')'  (68)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (81)
	Receiver : .  (48)

	CLASS  shift 109
	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 110
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 69
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 70
	Expr : '@' . Expr  (71)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 111
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 71
	Expr : '$' . Expr  (72)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 112
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 72
	Expr : '#' . Expr  (73)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 113
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 73
	Stmt : VariableDef .  (28)

	.  reduce 28


state 74
	Stmt : StmtBlock .  (37)

	.  reduce 37


state 75
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 76
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 114
	.  error


state 77
	Stmt : IfStmt .  (30)

	.  reduce 30


state 78
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 79
	Stmt : ForStmt .  (32)

	.  reduce 32


state 80
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 115
	.  error


state 81
	Stmt : PrintStmt . ';'  (34)

	';'  shift 116
	.  error


state 82
	Stmt : BreakStmt . ';'  (35)

	';'  shift 117
	.  error


state 83
	Stmt : PrintCompStmt . ';'  (36)

	';'  shift 118
	.  error


state 84
	Stmt : DoStmt . ';'  (38)

	';'  shift 119
	.  error


state 85
	Receiver : Expr . '.'  (47)
	LValue : Expr . '[' Expr ']'  (50)
	Expr : Expr . '+' Expr  (55)
	Expr : Expr . '-' Expr  (56)
	Expr : Expr . '*' Expr  (57)
	Expr : Expr . '/' Expr  (58)
	Expr : Expr . '%' Expr  (59)
	Expr : Expr . EQUAL Expr  (60)
	Expr : Expr . NOT_EQUAL Expr  (61)
	Expr : Expr . '<' Expr  (62)
	Expr : Expr . '>' Expr  (63)
	Expr : Expr . LESS_EQUAL Expr  (64)
	Expr : Expr . GREATER_EQUAL Expr  (65)
	Expr : Expr . AND Expr  (66)
	Expr : Expr . OR Expr  (67)

	AND  shift 120
	OR  shift 121
	LESS_EQUAL  shift 122
	GREATER_EQUAL  shift 123
	EQUAL  shift 124
	NOT_EQUAL  shift 125
	'+'  shift 126
	'-'  shift 127
	'*'  shift 128
	'/'  shift 129
	'%'  shift 130
	'>'  shift 131
	'<'  shift 132
	'.'  shift 133
	'['  shift 134
	.  error


state 86
	SimpleStmt : LValue . '=' Expr  (44)
	Expr : LValue .  (52)

	'='  shift 135
	AND  reduce 52
	OR  reduce 52
	LESS_EQUAL  reduce 52
	GREATER_EQUAL  reduce 52
	EQUAL  reduce 52
	NOT_EQUAL  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	'%'  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	'.'  reduce 52
	'['  reduce 52


state 87
	SimpleStmt : Call .  (45)
	Expr : Call .  (53)

	AND  reduce 53
	OR  reduce 53
	LESS_EQUAL  reduce 53
	GREATER_EQUAL  reduce 53
	EQUAL  reduce 53
	NOT_EQUAL  reduce 53
	'+'  reduce 53
	'-'  reduce 53
	'*'  reduce 53
	'/'  reduce 53
	'%'  reduce 53
	'>'  reduce 53
	'<'  reduce 53
	'.'  reduce 53
	';'  reduce 45
	')'  reduce 45
	'['  reduce 53


state 88
	LValue : Receiver . IDENTIFIER  (49)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (51)

	IDENTIFIER  shift 136
	.  error


state 89
	Expr : Constant .  (54)

	.  reduce 54


state 90
	WhileStmt : WHILE '(' . Expr ')' Stmt  (95)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 137
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 91
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (96)
	SimpleStmt : .  (46)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48
	';'  reduce 46

	SimpleStmt  goto 138
	Expr  goto 85
	LValue  goto 86
	Call  goto 87
	Receiver  goto 88
	Constant  goto 89


state 92
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (98)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 139
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 93
	Receiver : Expr . '.'  (47)
	LValue : Expr . '[' Expr ']'  (50)
	Expr : Expr . '+' Expr  (55)
	Expr : Expr . '-' Expr  (56)
	Expr : Expr . '*' Expr  (57)
	Expr : Expr . '/' Expr  (58)
	Expr : Expr . '%' Expr  (59)
	Expr : Expr . EQUAL Expr  (60)
	Expr : Expr . NOT_EQUAL Expr  (61)
	Expr : Expr . '<' Expr  (62)
	Expr : Expr . '>' Expr  (63)
	Expr : Expr . LESS_EQUAL Expr  (64)
	Expr : Expr . GREATER_EQUAL Expr  (65)
	Expr : Expr . AND Expr  (66)
	Expr : Expr . OR Expr  (67)
	ReturnStmt : RETURN Expr .  (101)

	AND  shift 120
	OR  shift 121
	LESS_EQUAL  shift 122
	GREATER_EQUAL  shift 123
	EQUAL  shift 124
	NOT_EQUAL  shift 125
	'+'  shift 126
	'-'  shift 127
	'*'  shift 128
	'/'  shift 129
	'%'  shift 130
	'>'  shift 131
	'<'  shift 132
	'.'  shift 133
	'['  shift 134
	';'  reduce 101


state 94
	Expr : LValue .  (52)

	.  reduce 52


state 95
	Expr : Call .  (53)

	.  reduce 53


state 96
	Expr : NEW IDENTIFIER . '(' ')'  (78)

	'('  shift 140
	.  error


state 97
	Type : Type . '[' ']'  (12)
	Expr : NEW Type . '[' Expr ']'  (79)

	'['  shift 141
	.  error


state 98
	PrintStmt : PRINT '(' . ExprList ')'  (103)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 142
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89
	ExprList  goto 143


state 99
	Expr : READ_INTEGER '(' . ')'  (74)

	')'  shift 144
	.  error


state 100
	Expr : READ_LINE '(' . ')'  (75)

	')'  shift 145
	.  error


state 101
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (80)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 146
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 102
	Expr : DCOPY '(' . Expr ')'  (82)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 147
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 103
	Expr : SCOPY '(' . Expr ')'  (83)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 148
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 104
	PrintCompStmt : PRINTCOMP '(' . ExprList ')'  (104)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 142
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89
	ExprList  goto 149


state 105
	Expr : CASE '(' . Expr ')' '{' ACaseExprList DefaultExpr '}'  (84)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	Expr  goto 150
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 106
	DoStmt : DO DoBranchList . DoSubStmt OD  (39)
	DoBranchList : DoBranchList . DoBranch  (40)
	Receiver : .  (48)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	SUPER  shift 60
	DCOPY  shift 61
	SCOPY  shift 62
	CASE  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 48

	DoSubStmt  goto 151
	DoBranch  goto 152
	Expr  goto 153
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 107
	Receiver : Expr . '.'  (47)
	LValue : Expr . '[' Expr ']'  (50)
	Expr : Expr . '+' Expr  (55)
	Expr : Expr . '-' Expr  (56)
	Expr : Expr . '*' Expr  (57)
	Expr : Expr . '/' Expr  (58)
	Expr : Expr . '%' Expr  (59)
	Expr : Expr . EQUAL Expr  (60)
	Expr : Expr . NOT_EQUAL Expr  (61)
	Expr : Expr . '<' Expr  (62)
	Expr : Expr . '>' Expr  (63)
	Expr : Expr . LESS_EQUAL Expr  (64)
	Expr : Expr . GREATER_EQUAL Expr  (65)
	Expr : Expr . AND Expr  (66)
	Expr : Expr . OR Expr  (67)
	Expr : '-' Expr .  (69)
